# wassette

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.local  Justfile  README.md  RELEASE.md  STATE_PERSISTENCE_SUMMARY.md  _typos.toml  build.rs  component-registry.json  deny.toml  docker-compose.example.yml
.git-hooks/: README.md  pre-commit
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  security.yml
.github/instructions/: rust.instructions.md
.github/workflows/: changelog-fragment.lock.yml  changelog-fragment.md  changelog-pr-link.lock.yml  ci-doctor.lock.yml  copilot-setup-steps.yml  dependabot-automerge.yml  examples.yml  issue-triage.lock.yml  issue-triage.md  nix.yml  plan.lock.yml  plan.md  pr-triage.lock.yml  pr-triage.md  prepare-release.yml  release-doctor.lock.yml  release.yml  rust.yml  scout.lock.yml  update-package-manifests.yml
Formula/: wassette.rb
changelog.d/: 508.feature.md  567.feature.md
crates/component2json/: Cargo.toml  README.md
crates/component2json/src/: lib.rs
crates/policy/: Cargo.toml
crates/wassette/: Cargo.toml
crates/wassette/src/: config.rs  ipc_protocol.rs  ipc_server.rs  lib.rs  loader.rs  oci_auth.rs  oci_multi_layer.rs  policy_internal.rs  runtime_context.rs  secrets.rs  state.rs  state_persistence.rs  wasistate.rs
deployment/: README.md
deployment/kubernetes/: README.md  deployment.yaml  kagent-integration.md  wassette-remotemcp.yaml
docs/: SUMMARY.md  concepts.md  faq.md  installation.md  mcp-logging.md
docs/cookbook/: README.md
docs/deployment/: docker.md  kubernetes.md
docs/design/: agentic-workflows.md  state-persistence.md  tool-name-normalization.md
docs/examples/: state-persistence-examples.md
docs/reference/: built-in-tools.md  cli.md  configuration-files.md  environment-variables.md  state-management.md
examples/crates-io-rs/: Cargo.toml  Justfile  README.md  policy.yaml
examples/fetch-es/: README.md  fetch.js  package.json  (+1 more)
examples/fetch-rs/: Cargo.toml
examples/fetch-rs/src/: bindings.rs  lib.rs
examples/fetch-rs/wit/: world.wit
scripts/: README-actions-pinning.md  add-version-comments.sh  install-git-hooks.sh  pin-actions.sh
src/: authorization.rs  cli_handlers.rs  commands.rs  config.rs  ipc_client.rs  lib.rs  main.rs  manifest.rs  mcp_logging.rs  permission_synthesis.rs  provisioning_controller.rs
tests/: authorization_integration_test.rs  cli_integration_test.rs  fetch_advanced_integration_test.rs  fetch_advanced_integration_test.rs.bak  fetch_es_integration_test.rs  headless_mode_integration_test.rs  ipc_client_integration_test.rs  ipc_server_integration_test.rs  mcp_logging_test.rs  oci_integration_test.rs  secret_injection_integration_test.rs  selective_tool_loading_test.rs  stateful_component_test.rs  transport_integration_test.rs
winget/: Microsoft.Wassette.yaml
(+23 files in other folders)
