[package]
name = "wassette"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
anyhow = { workspace = true }
component2json = { path = "../component2json" }
etcetera = { workspace = true }
futures = { workspace = true }
hex = "0.4"
http = "1.0"
num_cpus = "1.0"
hyper = { version = "1.7", features = ["client"] }
oci-client = { workspace = true }
oci-wasm = { workspace = true }
policy = { workspace = true }
reqwest = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
serde_yaml = { workspace = true }
zeroize = "1.8"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true, features = ["attributes"] }
url = "2.5"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasmtime-wasi-http = { workspace = true }
wasmtime-wasi-config = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_Security"] }

[dev-dependencies]
proptest = "1.8"
temp-env = "0.3"
test-log = { workspace = true, features = ["trace"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-test = { workspace = true }
